--- a/www/index.html
+++ b/www/index.html
@@ -125,7 +125,7 @@
                     <h1 class="friends-page-header">friends
                         <a href="#/addfriends" class="button button-icon icon ion-plus-round"></a>
                     </h1>
-                    <p class="pane-title" ng-hide="friends" >You have no friends yet :(</p>
+                    <p class="pane-title" ng-hide="friends" >You have no friends yet.</p>
                     <ion-content class="friends-page-content" has-bouncing="true">
                         <ion-list>
                             <ion-item ng-repeat="friend in friends">
@@ -143,7 +143,8 @@
         <ion-view title="Add Friends">
             <ion-tabs class="tabs-positive tabs-icon-only addfriends">
 
-                <ion-tab on-select="onTabSelected()" title="Heart" icon-on="ion-ios7-heart" icon-off="ion-ios7-heart-outline" class="bg-color-one">
+                <ion-tab on-select="onTabSelected('othersAdded')" title="Heart" icon-on="ion-ios7-heart" icon-off="ion-ios7-heart-outline" class="bg-color-one">
+	                <p class="pane-title">People who added you:</p>
                     <ion-content class="others-added-content" has-bouncing="true">
                         <ion-list>
                             <ion-item ng-repeat="user in othersAdded" class="item-icon-right">
@@ -154,11 +155,11 @@
                     </ion-content>
                 </ion-tab>
 
-                <ion-tab on-select="onTabSelected()" title="Contacts" icon-on="ion-ios7-bookmarks" icon-off="ion-ios7-bookmarks-outline" class="bg-color-two">
+                <ion-tab on-select="onTabSelected('contacts')" title="Contacts" icon-on="ion-ios7-bookmarks" icon-off="ion-ios7-bookmarks-outline" class="bg-color-two">
                     <p class="pane-title">Add Friends to contact to be implemented.</p>
                 </ion-tab>
 
-                <ion-tab on-select="onTabSelected()" title="Search" icon-on="ion-ios7-search-strong" icon-off="ion-ios7-search" class="bg-color-three">
+                <ion-tab on-select="onTabSelected('searchUsers')" title="Search" icon-on="ion-ios7-search-strong" icon-off="ion-ios7-search" class="bg-color-three">
                     <form class="bar item-input-inset">
                         <label class="item-input-wrapper">
                             <i class="icon ion-ios7-search placeholder-icon"></i>
