change default list number to 5

--- a/www/index.html
+++ b/www/index.html
@@ -107,13 +107,17 @@
 
                 <ion-slide class="home-page">
                     <h1>evince</h1>
-                    <ion-content class="evince-list-content" >
+                    <ion-content class="evince-list-content">
                         <ul id="messageList" class="list evince-list hidden">
                             <li class="item color-one" ng-click="evince(latestMessages[0].message)">*
                                 <span ng-bind="latestMessages[0].message"></span>*</li>
                             <li class="item color-two" ng-click="evince(latestMessages[1].message)">*
                                 <span ng-bind="latestMessages[1].message"></span>*</li>
                             <li class="item color-three" ng-click="evince(latestMessages[2].message)">*
+                                <span ng-bind="latestMessages[2].message"></span>*</li>
+                            <li class="item color-one" ng-click="evince(latestMessages[3].message)">*
+                                <span ng-bind="latestMessages[2].message"></span>*</li>
+                            <li class="item color-two" ng-click="evince(latestMessages[4].message)">*
                                 <span ng-bind="latestMessages[2].message"></span>*</li>
                             <li class="item color-four">
                                 <div class="item item-input evince-input row">
