--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
     <script src="js/app.js"></script>
 </head>
 
-<body ng-app="starter" animation="slide-left-right-ios7">
+<body ng-app="starter" animation="slide-left-right-ios7" class="{{containerClass}}">
 
     <ion-nav-bar id="nav-bar" class="bar-positive nav-title-slide-ios7">
         <ion-nav-back-button class="button-icon ion-arrow-left-c">
@@ -154,7 +154,7 @@
     </script>
 
     <script id="templates/addfriends.html" type="text/ng-template">
-        <ion-view title="Add Friends">
+        <ion-view title=" " class="add-friends-page">
             <ion-tabs class="tabs-positive tabs-icon-only addfriends">
 
                 <ion-tab on-select="onTabSelected('othersAdded')" title="Heart" icon-on="ion-ios7-heart" icon-off="ion-ios7-heart-outline" class="bg-color-three">
