--- a/www/index.html
+++ b/www/index.html
@@ -112,17 +112,17 @@
 	                	<img class="evince-header" src="img/top-bar.jpg">
 	                </h1>
                     <ion-content class="evince-list-content">
-                        <ul id="messageList" class="list evince-list hidden">
-                            <li class="item color-one" ng-click="evince(latestMessages[0].message)">*
-                                <span ng-bind="latestMessages[0].message"></span>*</li>
-                            <li class="item color-five" ng-click="evince(latestMessages[1].message)">*
-                                <span ng-bind="latestMessages[1].message"></span>*</li>
-                            <li class="item color-three" ng-click="evince(latestMessages[2].message)">*
-                                <span ng-bind="latestMessages[2].message"></span>*</li>
-                            <li class="item color-one" ng-click="evince(latestMessages[3].message)">*
-                                <span ng-bind="latestMessages[3].message"></span>*</li>
-                            <li class="item color-five" ng-click="evince(latestMessages[4].message)">*
-                                <span ng-bind="latestMessages[4].message"></span>*</li>
+                        <ul id="messageList" class="list evince-list">
+                            <li class="item color-one" ng-click="evince(latestMessages[0])">*
+                                <span ng-bind="latestMessages[0]"></span>*</li>
+                            <li class="item color-five" ng-click="evince(latestMessages[1])">*
+                                <span ng-bind="latestMessages[1]"></span>*</li>
+                            <li class="item color-three" ng-click="evince(latestMessages[2])">*
+                                <span ng-bind="latestMessages[2]"></span>*</li>
+                            <li class="item color-one" ng-click="evince(latestMessages[3])">*
+                                <span ng-bind="latestMessages[3]"></span>*</li>
+                            <li class="item color-five" ng-click="evince(latestMessages[4])">*
+                                <span ng-bind="latestMessages[4]"></span>*</li>
                             <li class="item color-four">
                                 <div class="item item-input evince-input row">
                                     <div class="placeholder-icon asterisk col">*</div>
