remove icon from alert messages

--- a/www/index.html
+++ b/www/index.html
@@ -92,7 +92,7 @@
                             <input autocorrect="off" autocomplete="off" autocapitalize="off" type="password" placeholder="Password" ng-model="user.password">
                         </label>
                     </div>
-                    <span id="signUpError" class="hidden button icon-left ion-alert button-clear button-assertive form-error">{{signUpError}}</span>
+                    <span id="signUpError" class="hidden button button-clear button-assertive form-error">{{signUpError}}</span>
                     <div>
                         <button id="signUpButton" class="button button-full button-positive evince-button" ng-click="signUp(user)">
                             Sign Up
